--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "postcss": "^8.4.24",
     "prettier": "^2.6.2",
     "prisma": "^4.16.1",
+    "react-hook-form": "^7.49.3",
     "tailwindcss": "^3.3.2",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
